--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Perfil</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <ul>
+    <ul id="menu">
       <li>
         <a href="index.html">Home</a>
       </li>
@@ -16,39 +17,89 @@
       </li>
     </ul>
 
-    <h1>Sobre a Chris</h1>
-    <p>
-      Mussum Ipsum, cacilds vidis litro abertis. Aenean aliquam molestie leo,
-      vitae iaculis nisl.Em pé sem cair, deitado sem dormir, sentado sem
-      cochilar e fazendo pose.Nullam volutpat risus nec leo commodo, ut interdum
-      diam laoreet. Sed non consequat odio.Mé faiz elementum girarzis, nisi eros
-      vermeio. In elementis mé pra quem é amistosis quis leo.Per aumento de
-      cachacis, eu reclamis.Quem num gosta di mé, boa gentis num é.Delegadis
-      gente finis, bibendum egestas augue arcu ut est. Tá deprimidis, eu conheço
-      uma cachacis que pode alegrar sua vidis.Nullam volutpat risus nec leo
-      commodo, ut interdum diam laoreet. Sed non consequat odio.Quem num gosta
-      di mé, boa gentis num é.Casamentiss faiz malandris se pirulitá. Não sou
-      faixa preta cumpadi, sou preto inteiris, inteiris.Quem num gosta di mé,
-      boa gentis num é.Diuretics paradis num copo é motivis de denguis.Posuere
-      libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet
-      nisi. Delegadis gente finis, bibendum egestas augue arcu ut est.A ordem
-      dos tratores não altera o pão duris.Nec orci ornare consequat. Praesent
-      lacinia ultrices consectetur. Sed non ipsum felis.In elementis mé pra quem
-      é amistosis quis leo.
-    </p>
+    <h1 class="center">Sobre a Chris</h1>
+    <div class="container">
+      <div>
+        <img
+          class="br-50 wh-300 p-30"
+          src="assets/img/foto-perfil .jpg"
+          width="200"
+          alt="Foto perfil"
+        />
+      </div>
 
-    <img src="assets/img/foto-perfil .jpg" width="200" alt="Foto perfil" />
+      <div class="p-30">
+        <p class="justify">
+          Mussum Ipsum, cacilds vidis litro abertis. Aenean aliquam molestie
+          leo, vitae iaculis nisl.Em pé sem cair, deitado sem dormir, sentado
+          sem cochilar e fazendo pose.Nullam volutpat risus nec leo commodo, ut
+          interdum diam laoreet. Sed non consequat odio.Mé faiz elementum
+          girarzis, nisi eros vermeio. In elementis mé pra quem é amistosis quis
+          leo.Per aumento de cachacis, eu reclamis.Quem num gosta di mé, boa
+          gentis num é.Delegadis gente finis, bibendum egestas augue arcu ut
+          est. Tá deprimidis, eu conheço uma cachacis que pode alegrar sua
+          vidis.
+        </p>
+        <p class="justify">
+          Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed
+          non consequat odio.Quem num gosta di mé, boa gentis num é.Casamentiss
+          faiz malandris se pirulitá. Não sou faixa preta cumpadi, sou preto
+          inteiris, inteiris.Quem num gosta di mé, boa gentis num é.Diuretics
+          paradis num copo é motivis de denguis.Posuere libero varius. Nullam a
+          nisl ut ante blandit hendrerit. Aenean sit amet nisi. Delegadis gente
+          finis, bibendum egestas augue arcu ut est.A ordem dos tratores não
+          altera o pão duris.Nec orci ornare consequat. Praesent lacinia
+          ultrices consectetur. Sed non ipsum felis.In elementis mé pra quem é
+          amistosis quis leo.
+        </p>
+      </div>
+    </div>
 
-    <h2>Meu vídeo predileto:</h2>
+    <h2 class="center">Meu vídeo predileto:</h2>
+    <div class="container mb-50">
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/7XiTyvdH7rs"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay;clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
+    </div>
 
-    <iframe
-      width="560"
-      height="315"
-      src="https://www.youtube.com/embed/7XiTyvdH7rs"
-      title="YouTube video player"
-      frameborder="0"
-      allow="accelerometer; autoplay;clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen
-    ></iframe>
+    <hr />
+
+    <footer>
+      <div class="container">
+        <a href="https://github.com/chris-kauffmann" target="_blank">
+          <img
+            class="tm-social p-30"
+            src="assets/img/github.png"
+            alt="logo do github"
+          />
+        </a>
+
+        <a href="https://www.instagram.com/chriskauffmann/" target="_blank">
+          <img
+            class="tm-social p-30"
+            src="assets/img/instagram.png"
+            alt="logo do instagram"
+          />
+        </a>
+
+        <a
+          href="https://www.linkedin.com/in/christine-outi-kauffmann/"
+          target="_blank"
+        >
+          <img
+            class="tm-social p-30"
+            src="assets/img/linkedin.png"
+            alt="logo do linkedin"
+          />
+        </a>
+      </div>
+      <p class="center">Christine Kauffmann &copy;</p>
+    </footer>
   </body>
 </html>
